Only flush a display if we have one

This was causing occasional segfaults in the gdm session.
https://bugzilla.gnome.org/show_bug.cgi?id=648942